--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 		<nav class="nav">
 			<ul>
-			<li><a href="home.html"><i class='fas fa-home' style='font-size:30px'> Home</i></a></li>
+			<li><a href="index.html"><i class='fas fa-home' style='font-size:30px'> Home</i></a></li>
 			<li><a href="int.html"><i class='fas fa-table-tennis' style='font-size:30px'> Interests</i></a></li>
 			<li><a href="achieve.html"><i class='fas fa-graduation-cap' style='font-size:30px'> Achievements</i></a></li>
 			<li><a href="contact.html"><i class='fas fa-address-book' style='font-size:30px'> Contact Me</i></a></li>
