Made changes in link

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
 	<tr>
 		<td><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="gmail.jpg" height="90" width="120" alt="gmail" class="gmail"></a></td>
 		<td><a href="https://www.facebook.com/vinay.srivastava.92102"><img src="fb.png" height="150" width="200" alt="Facebook" class="fb"></a></td>
-		<td><a href="https://www.instagram.com/"><img src="insta.png" height="100" width="150" alt="Instagram" class="insta"></a></td>
-		<td><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="logo.png" height="150" width="200" alt="Whatsapp" class="wp"></a></td>
+		<td><a href="https://www.instagram.com/vinay_725/"><img src="insta.png" height="100" width="150" alt="Instagram" class="insta"></a></td>
+		<td><a href="https://web.whatsapp.com"><img src="logo.png" height="150" width="200" alt="Whatsapp" class="wp"></a></td>
 	</tr>
 	<tr>
 		<td><center>Mail me </center></td>
