--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Lobster&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
+<body style="background:url('IC8P09.jpg'); background-attachment:scroll;background-size: cover;">
 	<header class="menu">
 		<div class="heading"><img src="logo.jpg" height="75" width="150" alt="logo"></div>
 
