--- a/int.html
+++ b/int.html
@@ -24,7 +24,7 @@
 
 	<img src="hobbies.png" height="40%" width="40%" alt="My Photo" class="hobby">
 	
-	<div class="content">
+	<div class="interest">
 		<ul>
 			<li>These stuffs are all</li>
 			<li>that make</li>
