--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body style="background:url('76459461-double-exposure-of-professional-businessman-connected-devices-with-world-digital-technology-internet.jpg'); background-attachment:scroll;background-size: cover;">
+<body style="background:url('trent-erwin-338084-unsplash.jpg'); background-attachment:scroll;background-size: cover;">
 	<header class="menu">
 		<div class="heading"><img src="logo.jpg" height="75" width="150" alt="logo"></div>
 
